# Zombiemodeling

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: human.cpp  human.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h  world.cpp  world.h  worldobject.cpp  worldobject.h  zombie.cpp  zombie.h
